# pocket-cursor

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Makefile  README.md  chat_detection.py  coverage.xml  debug.txt  instrumentation.mjs  md_to_image.mjs  package.json  pocket-cursor.mdc  pocket_cursor.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart_pocket_cursor.py  setup_local_render.py  start_cursor.py
.cursor/plans/: agents_window_cdp_support_7a7484a6.plan.md  telegram_multi-route_routing_e325ca9a.plan.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
lib/: command_rules.json  command_rules.py  observability.py  telegram_routes.py
scripts/: upload_pronunciation.py  voice_message.example.json  voice_message.py
